--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,194 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;html,
-
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import './base.css';
+@import './state.css';
+ /* font  */
+ @font-face {
+  font-family: 'Aeonik-Air';
+  /* font-style: normal;  */
+  font-display: swap;
+  src: url(/fonts/Aeonik-font-download/Aeonik-Air.otf);
+}
+@font-face {
+  font-family: 'Aeonik-Black';
+  /* font-style: normal;  */
+  font-display: swap;
+  src: url(/fonts/Aeonik-font-download/Aeonik-Black.otf);
+}
+@font-face {
+  font-family: 'Aeonik-Thin';
+  /* font-style: normal;  */
+  font-display: swap;
+  src: url(/fonts/Aeonik-font-download/Aeonik-Thin.otf);
+}
+@font-face {
+  font-family: 'Aeonik-Bold';
+  /* font-style: normal; 
+   font-weight: 400; 
+  font-display: swap; */
+  src: url(/fonts/Aeonik-font-download/Aeonik-Bold.otf);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: 'Aeonik-Light';
+  /* font-style: normal; 
+   font-weight: 400; */ 
+  font-display: swap;
+  src:  url(/fonts/Aeonik-font-download/Aeonik-Light.otf);
 }
 
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: 'Aeonik-Medium';
+  /* font-style: normal; 
+   font-weight: 400; */ 
+  font-display: swap;
+  src:  url(/fonts/Aeonik-font-download/Aeonik-Medium.otf);
+}
+@font-face {
+  font-family: 'Aeonik-Regular';
+  /* font-style: normal; 
+  font-display: swap; */
+  src:  url(/fonts/Aeonik-font-download/Aeonik-Air.otf);
+}
+
+/* reset  */
+html{
+  --res : calc(0.01*10vmin);
+  --res2 : calc(0.013*10vmin);
+  --opac : #D8D8D8;
+}
+body{
+  background: #fdfdfd; 
+  overflow-x:hidden;
+}
+*{
+   font-family:'Aeonik-Medium'; 
+  list-style: none;
+  margin:0;
+  }
+
+ /* flexbox  */
+.flex{
+  display: flex
+}
+
+.flex-col{
+  display: flex;
+  flex-direction: column;
+}
+.justify-around{
+  display: flex;
+  justify-content: space-around;
+}
+.justify-evenly{
+  display: flex; 
+  justify-content: space-evenly;
+}
+.justify-between{
+  display: flex; 
+  justify-content: space-between;
+}
+
+
+/* margin  */
+.mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.mx-10 {
+  margin-left: 0%;
+  margin-right: 0%;
+}
+/* padding */
+.py-2 {
+  padding-top: 0.5rem/* 8px */;
+  padding-bottom: 0.5rem/* 8px */;
+}
+
+.px-2 {
+  padding-left: 0.5rem/* 8px */;
+  padding-right: 0.5rem/* 8px */;
+}
+.content-center{
+  align-items: center;
+  justify-content: center;
+}
+/* width */
+.w-screen {
+  width: 100vw;
+}
+/* modules */
+.header{
+  height: 10vh;
+  width: 100vw;
+  justify-content: space-between;
+  position: fixed;
+}
+
+.container-l{
+height: 100%;
+}
+
+/* tags */
+
+p{
+  font-size: calc(24 * var(--res));
+}
+
+
+/* section{
+  margin: 0% 10% ;
+
+} */
+.section_title{
+
+  background: linear-gradient(264.57deg, #3b5cff -3.04%, #16f3fd 222.91%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: Aeonik-Bold;
+  font-size: calc(60 * var(--res));
+  padding: 1%;
+}
+
+/* section{
+  padding-top: 10vh;
+  height: 100vh;
+} */
+
+
+/* components */
+
+
+.lineup{
+      /* background: #D8D8D8; */
+    
+    width: 5%;
+      height: calc(50 * var(--res));
+      border-left: solid 2px var(--opac);
+      margin: auto 0 auto 5%;
+   
+}
+
+
+.slogan {
+  /* If you are considering a JobMoov, we are the solution! */
+
+  left: 0px;
+  top: 0px;
+  padding-right: 0%;
+  font-family: Aeonik-Medium;
+  font-style: normal;
+  font-weight: 800;
+  font-size: calc(50 * var(--res));
+  line-height: 150%;
+  /* or 72px */
+  text-transform: capitalize;
+  max-width:calc(800 * var(--res));
+  width:100%;
+  color: #222222;
+  word-spacing: calc(10 * var(--res));
 }
