--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,116 +1,110 @@
-.container{
- position:absolute;
- 
- left:0;
- width:100vw;
- height:40vh;
- display:flex;
- flex-direction:column;
- justify-content: space-between;
- margin:10% 10% 10% 10%;
+.container {
+    left: 0;
+    width: 80vw;
+    margin: auto;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 10% 10% 10% 10%;
 }
-.container_top{
-    display:flex;
-    height:40%;
-    margin-bottom:4%;
+.container_top {
+    display: flex;
+    height: 40%;
+    margin-bottom: 4%;
+    justify-content: space-between;
+}
+.container_left {
+    display: flex;
+    flex-direction: column;
+    width: 26%;
+    height: 100%;
+    align-content: flex-start;
+}
+.container_left_logo {
+}
 
-}
-.container_left{
-    display:flex;
-    flex-direction:column;
-    width:25%;
-    height:100%;
-    align-content:flex-start;
-}
-.container_left_logo{
-}
-
-.container_left p{
-    color: rgba(0, 0, 0,0.85);
+.container_left p {
+    color: rgba(0, 0, 0, 0.85);
     font-family: Aeonik-regular;
     font-weight: 900;
-    line-height:170%;
+    line-height: 170%;
     word-spacing: calc(3 * var(--res));
     font-size: calc(18 * var(--res));
     width: 80%;
-    padding-top:6%;    
+    padding-top: 6%;
 }
 
-.container_right{
-display:flex;
-justify-content: space-evenly;
+.container_right {
+    display: flex;
 
-width:35%;
-height:100%;
-padding-left:10%;
+    height: 100%;
+
+    display: flex;
+
+    width: 50%;
+    height: 100%;
 }
 
-.container_right ul{
-    display:flex;
-    flex-direction:column;
-
-    height:100%;
-    justify-content:space-between;
+.container_right ul {
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    justify-content: space-between;
     font-family: Aeonik-regular;
     font-weight: 900;
-    line-height:120%;
-    font-size: calc(19 * var(--res));  
-    margin-top:1%;
+    line-height: 120%;
+    font-size: calc(19 * var(--res));
+    margin-top: 1%;
+    width: 50%;
 }
-.container_right ul li{
- margin-bottom: 20%;
+.container_right ul li {
+    margin-bottom: calc(19 * var(--res));
 }
-.container_right ul li:first-child{
+.container_right ul li:first-child {
     font-family: Aeonik-Medium;
-   
 }
-.container_right ul li:hover{
-   cursor:pointer;
-    
+.container_right ul li:hover {
+    cursor: pointer;
 }
 
-.container_bot{
-    display:flex;
-    justify-content:space-between;
-    width:70%;
+.container_bot {
+    display: flex;
+    justify-content: space-between;
+
     font-family: Aeonik-regular;
     font-weight: 900;
-    margin-bottom:2%;
-    padding-top:2%;
-    height:20%;
-    border-top: solid #ECECEC;
-  
+    margin-bottom: 2%;
+    padding-top: 2%;
+    height: 20%;
+    border-top: solid #ececec;
 }
 .container_bot p {
-    font-size: calc(20 * var(--res));   
-    align-self:center ;
+    font-size: calc(20 * var(--res));
+    align-self: center;
 }
 
-.container_bot_right{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    width:22%;
+.container_bot_right {
+    display: flex;
+    align-items: center;
+    /* justify-content: space-around; */
+    width: 15%;
 }
 
-
-.container_bot_icons{
-display:flex;
-justify-content:space-evenly;
-width:70%;
+.container_bot_icons {
+    display: flex;
+    justify-content: space-evenly;
+    width: 70%;
 }
 .container_bot_icon {
-  display: flex;
-  justify-content: center;
-  background: #ECECEC;
-  border-radius: 6px;
-  width:calc(35 * var(--res)); 
-  height:calc(35 * var(--res)); 
-
-    }
-
-
-.container_bot_icon:hover {
-    cursor:pointer;
+    display: flex;
+    justify-content: center;
+    background: #ececec;
+    border-radius: 6px;
+    width: calc(35 * var(--res));
+    height: calc(35 * var(--res));
 }
 
+.container_bot_icon:hover {
+    cursor: pointer;
+}
